# tiny-eqa

./: README.md  pyproject.toml
notebooks/: spatial_quantization.ipynb
prompts/: viper_eqa.txt
scripts/: generate_prompts.py
src/tiny_eqa/agents/: __init__.py  agent.py  common.py  common_functions.py  image_patch.py  image_patch_functions.py  scene_cache.py  scene_patch.py  scene_patch_functions.py
src/tiny_eqa/benchmarks/: benchmark_2D.py  benchmark_base.py  benchmark_caption.py  benchmark_qa.py  benchmark_vg.py
src/tiny_eqa/data/: __init__.py  common.py  sequence.py  sequence_reader.py
src/tiny_eqa/models/: model_base.py  model_clip.py  model_depth_anything.py  model_dino.py  model_gpt.py  model_grounding_dino.py  model_llava.py  model_llava_multiframe.py  transforms.py
src/tiny_eqa/utils/: math.py  visualizations.py
