[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-eqa"
version = "0.0.1"
description = "Parameter Efficient 3DQA via Distilling 2D Visual Inference Models"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "matplotlib",
    "natsort",
    "numpy==1.26.4",
    "omegaconf",
    "openai",
    "torch",
    "torchvision",
    "torchtyping",
    "tqdm",
]

[project.optional-dependencies]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tiny_eqa*"]